# Tensor-Consensus

./: LICENSE  README.md  environment.yml  pyproject.toml
scripts/: benchmark.py  reproduce.py  setup_environment.sh
src/: __init__.py
src/environments/: __init__.py  football_integration.py  mpe_integration.py  smac_integration.py
src/models/: __init__.py  mamba_ssm.py  transformer.py
src/operators/: __init__.py  assignment.py  consensus.py  pipeline.py  projection.py
src/training/: __init__.py  curriculum.py  evaluation.py  train.py
tests/: test_operators.py
