[project]
name = "tensor-consensus"
version = "0.1.0"
description = "TPU-Based Framework for Differentiable Coordination in Large-Scale Multi-Agent Systems"
authors = [
    {name = "Marco Durán Cabobianco", email = "marco@anachroni.co"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "jax[tpu]>=0.4.25",
    "jaxlib>=0.4.25",
    "flax>=0.8.0",
    "optax>=0.1.9",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "gymnasium>=0.28.0",
    "pettingzoo>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

gpu = [
    "jax[cuda11_pip]>=0.4.25",
]

mamba = [
    "mamba-ssm>=1.0.0",
]

benchmarks = [
    "pysc2>=3.0.0",
    "smac>=1.0.0",
    "gfootball>=2.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
